# es-sensor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  es_sensor.cbp  main.cpp  makefile  version_config.h.in
MiscBlocks/: AvroSerialization.cpp  AvroSerialization.h  FileSink.cpp  FileSink.h  IQSink.cpp  IQSink.h  IQStream.cpp  IQStream.h  Transmission.cpp  Transmission.h
MiscBlocks/Filter/: test.cpp
MiscBlocks/Filter/CIC/: CIC.h  IntComb.h
MiscBlocks/Filter/FIR/: FIRDesign.cpp  FIRDesign.h  FractionalFIRFilter.h  RationalFIRFilter.h
MiscBlocks/Filter/Resampler/: Downsampler.cpp  Downsampler.h  Resampler.h
ProcessingBlocks/: Averaging.cpp  Averaging.h  FFT.cpp  FFT.h  FileSink.h  PSDFast.cpp  PSDFast.h  RemoveDC.cpp  RemoveDC.h  RemoveDCRTL.cpp  RemoveDCRTL.h  Windowing.cpp  Windowing.h
certs/: Sensor-MySQL-Cert.pem  Sensor-MySQL-SK.pem  Sensor-SSL-Cert.pem  Sensor-SSL-SK.pem  id_controller.pub  id_sensor  id_sensor.pub
cmake/: FindFFTW3.cmake
cmake/Modules/: FindAvro.cmake  FindLiquid.cmake  FindOpenSSL.cmake  FindRTLSDR.cmake
collector/: README  pom.xml
collector/src/main/certs/: CA-Cert.pem  Collector-SSL-Cert.pem  Collector-SSL-SK.pem  README  convert_keys.sh  keystore.jks  keystore.p12  truststore.jks
collector/src/main/java/ch/electrosense/: Collector.java
collector/src/main/java/ch/electrosense/avro/v1/: Sample.java  SenConfRec.java  SenDataRec.java  SenPosRec.java  SenTimeRec.java
collector/src/main/java/ch/electrosense/collector/: Collector.java  ConnectionHandler.java  FileRawMsgHandler.java  KafkaMsgHandler.java  MsgHandler.java  ProcessingException.java
collector/src/main/resources/: log4j.properties
context/: ElectrosenseContext.cpp  ElectrosenseContext.h  OpenRFSenseContext.cpp  OpenRFSenseContext.h
drivers/: Communication.h  Component.h  Driver.h
drivers/common/: SequentialHopping.cpp  SequentialHopping.h
drivers/rtlsdr/: rtlsdrDriver.cpp  rtlsdrDriver.h
drivers/rtlsdr/converter/: converter.c  converter.h  rtlsdr_proxy.c  rtlsdr_proxy.h
drivers/soapysdr/: soapyDriver.cpp  soapyDriver.h
misc/: TCP.cpp  TCP.h  TLS.cpp  TLS.h  atomicops.h  readerwriterqueue.h
schema/: rtl-spec.avsc
schemas/: iq-spec.avsc  rtl-spec.avsc
scripts/: INSTALL_esSensor  RPi_install  RPi_plot  display.py  plot.gp  rcollector  rpi_plot.gp  stat.py  video_filter.py  waterfall_plot.m
scripts/cmake/: electrosense  es-campaign.cfg  postinst  postrm  run.sh
src/: CMakeLists.txt  FFT.c  ITE.c  QUE.c  SDR.c  TCP.c  THR.c  TLS.c  UTI.c  gpu_fft.c  gpu_fft_base.c  gpu_fft_shaders.c  gpu_fft_trans.c  gpu_fft_twiddles.c  mailbox.c
src/collector/: Collector.c
src/include/: FFT.h  ITE.h  QUE.h  SDR.h  TCP.h  THR.h  TLS.h  UTI.h
src/include/qasm/: gpu_fft_128k.qasm
src/misc/: FFT.c  ITE.c  QUE.c  TCP.c  TCP.h  THR.c  TLS.c  UTI.c
src/misc/gpu_fft_2/: gpu_fft.c  gpu_fft_base.c  gpu_fft_trans.c  mailbox.c
src/sensor/: Sensor.c
types/: SpectrumSegment.cpp  SpectrumSegment.h
